--- a/intermediate_goods_result.ipynb
+++ b/intermediate_goods_result.ipynb
@@ -253,13 +253,13 @@
     "$$\n",
     "and, rearranging the first-order condition for $z$,\n",
     "$$\n",
-    "- \\eta^{RP}f_z  = \\mu^{RP}h_z \\tag{2}\n",
+    "\\eta^{RP}f_z  = -\\mu^{RP}h_z \\tag{2}\n",
     "$$\n",
     "and, dividing $(2)$ by $(1)$ we obtain\n",
     "$$\n",
-    "-\\frac{f_z}{f_{l_1}} = \\frac{h_z}{h_{l_2}} \\tag{3}\n",
+    "\\frac{f_z}{f_{l_1}} = -\\frac{h_z}{h_{l_2}} \\tag{3}\n",
     "$$\n",
-    "This is the key equation here. "
+    "This is the key equation in this environment."
    ]
   },
   {
