--- a/Larry/intermediate_goods/intermediate_goods_result.ipynb
+++ b/Larry/intermediate_goods/intermediate_goods_result.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Intermediate goods taxation** "
+    "# **Intermediate Goods Taxation** "
    ]
   },
   {
