unif commodity taxation notes completed

--- a/Larry/uniform_commodity/unif_commodity.ipynb
+++ b/Larry/uniform_commodity/unif_commodity.ipynb
@@ -333,7 +333,111 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Return to the Ramsey Problem. Recall\n",
+    "$$\n",
+    "(1+\\tau_i) = -\\frac{U_i}{U_l}\\frac{F_n}{F_i}\n",
+    "$$\n",
+    "So,\n",
+    "$$\n",
+    "\\tau_i = \\tau_j\n",
+    "$$\n",
+    "$$\n",
+    " \\iff -\\frac{U_i}{U_l}\\frac{F_n}{F_i} = -\\frac{U_j}{U_l}\\frac{F_n}{F_j}\n",
+    "$$\n",
+    "$$\n",
+    "\\iff \\frac{U_i}{F_i} = \\frac{U_j}{F_j}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, set up the Largrangian for the Ramsey planner\n",
+    "$$\n",
+    "\\mathcal{L^{RP}} = U(c;l) - \\gamma \\left[F(c_1+g_1,\\ldots,c_J+g_J;n)\\right] + \\Lambda \\left[\\sum_i U_i c_i - U_l n \\right]\n",
+    "$$\n",
+    "$$\n",
+    "\\left[c_k \\right]: U_k - \\gamma F_k + \\Lambda U_k + \\Lambda \\sum_j U_{kj}c_j - \\Lambda n U_{lk} = 0\n",
+    "$$\n",
+    "and so we find\n",
+    "$$\n",
+    "(1+\\Lambda)U_k + \\Lambda\\left[\\sum_j c_j U_{kj} - nU_{lk} \\right] = \\gamma F_k\n",
+    "$$\n",
+    "and, using that $\\sum_j c_j U_{ij} = AU_i$, we see\n",
+    "$$\n",
+    "(1+\\Lambda)U_k + \\Lambda A U_k - \\Lambda nU_{lk} = \\gamma F_k.\n",
+    "$$\n",
+    "Then, by the utility function, we know\n",
+    "$$\n",
+    "U_k = W_1 G_k \\\\\n",
+    "U_l = W_2 \\\\\n",
+    "U_{lk} = W_{21} G_k \\\\\n",
+    "$$\n",
+    "and so\n",
+    "$$\n",
+    "(1+\\Lambda)W_1 G_k + \\Lambda A W_1 G_k - \\Lambda n W_{21}G_k = \\gamma F_k\n",
+    "$$\n",
+    "which, upon rearrangement gives \n",
+    "$$\n",
+    "\\frac{G_k}{F_k} = \\frac{\\gamma}{(1-\\Lambda)W_1 + \\Lambda A W_1 - \\Lambda n W_{21}}\n",
+    "$$\n",
+    "which is independent of $k$, and so it holds for all varieties. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hence, \n",
+    "$$\n",
+    "\\frac{G_i}{F_i} = \\frac{G_j}{F_j} \\implies \\frac{U_i}{W_1}\\frac{1}{F_i} = \\frac{U_j}{W_1}\\frac{1}{F_j}\n",
+    "$$\n",
+    "$$\n",
+    "\\frac{U_i}{F_i} = \\frac{U_j}{F_j}, \\forall i,j \n",
+    "$$\n",
+    "which by our previous results that $\\tau_i = \\tau_j, \\forall i,j$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ***Generalisations***\n",
+    "Consider some generalisations of this proposition.\n",
+    "\n",
+    "#### **Subgroup**\n",
+    "Suppose that the utility function is homothetic and separable over a subgroup of goods, in the sense that the utility function can be written as\n",
+    "$$\n",
+    "U(c_1,\\ldots,c_k,\\phi(c_{k+1},\\ldots,c_j);l)\n",
+    "$$\n",
+    "with $\\phi$ homothetic. Then, the Ramsey taxes are $\\tau_{k+1} = \\ldots = \\tau_n$.\n",
+    "\n",
+    "#### **Untaxed Income**\n",
+    "Suppose that we add to the model an endowment of good $1$, $y_1$, to the model, which is not taxed. Then, the implementability constraint becomes\n",
+    "$$\n",
+    "\\sum_i U_i c_i - U_ln = U_1y_1\n",
+    "$$\n",
+    "Then, even if $U$ satisfies $W(G(c);l)$ with $G$ homothetic, it is not true that optimal taxes are uniform. If we add the assumption that $U$ is additively separable across $c_1,\\ldots,c_J$, then the Ramsey taxes for goods $2$ through $J$ will be uniform, but not equal to the tax on good $1$.\n",
+    "\n",
+    "#### **Fixed Taxes**\n",
+    "Next, suppose that the tax system is incomplete in the sense that the government is restricted to setting the tax on good $1$ to some fixed value, say $\\tau_1 = 0$. Then, the planner must also face the following constraint:\n",
+    "$$\n",
+    "\\frac{U_1}{U_l} = -\\frac{F_1}{F_n}\n",
+    "$$\n",
+    "Since,\n",
+    "$$\n",
+    "1+\\underbrace{\\tau_1}_\\text{= 0} = -\\frac{U_1}{U_l}\\frac{F_n}{F_1} \\iff \\frac{U_l}{U_1} = -\\frac{F_n}{F_1}\n",
+    "$$\n",
+    "So, eve if $U$ satisfies $W(G(c);l)$ optimal commodity taxes on goods $2$ through $J$ are not necessarily uniform.\n",
+    "\n",
+    "#### **Infinite Horizon**\n",
+    "Finally, in order to connect this result on uniform commodity taxation to results in infinite horizon models, suppose that the utility function is defined over an infinite sequence of consumption and labour good as $U(c_1,c_2,\\ldots;l_1,l_2,\\ldots)$. The assumption that the utility is of the form $V(\\phi(c_1,c_2,\\ldots);l_1,l_2,\\ldots)$ with $\\phi$ homothetic and separable between consumption and all labour goods $l_1,l_2,\\ldots$ together with the assumption that the utility function is additively separable across time with constant discunt factor $\\beta$ restricts us to the form\n",
+    "$$\n",
+    "\\sum_t \\beta^t \\left[\\frac{c_t^{1-\\sigma}}{1-\\sigma} +G(l_t)\\right].\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
