hyperbolic discounting question completed

--- a/Larry/hyperbolic_discounting/hyp_discounting.ipynb
+++ b/Larry/hyperbolic_discounting/hyp_discounting.ipynb
@@ -160,7 +160,7 @@
     "\n",
     "Finally, agent 1 solves\n",
     "$$\n",
-    "\\max_{\\{c_1,s_1\\}} \\log(c_1) + \\delta \\left[\\beta \\log(\\frac{s_1}{1+\\delta\\beta})+ \\beta^2\\log(\\frac{s_1\\delta\\beta}{1+\\delta\\beta}) \\right] \\\\\n",
+    "\\max_{\\{c_1,s_1\\}} \\log(c_1) + \\delta \\left[\\beta \\log\\left(\\frac{s_1}{1+\\delta\\beta}\\right)+ \\beta^2\\log\\left(\\frac{s_1\\delta\\beta}{1+\\delta\\beta}\\right) \\right] \\\\\n",
     "s.t. \\quad c_1 + s_1 \\leq w\n",
     "$$\n",
     "where we notice that agent 1 takes as given the decisions of the later agents. The first-order conditions are\n",
@@ -203,7 +203,114 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$\n",
+    "c^*_1 = \\frac{w}{1+\\delta\\beta+\\delta\\beta^2}, \\quad c^{NC}_1 = \\frac{w}{1+\\delta\\beta+\\delta\\beta^2}\n",
+    "$$\n",
+    "$$\n",
+    "c^*_2 = \\frac{w\\delta\\beta}{1+\\delta\\beta+\\delta\\beta^2}, \\quad c^{NC}_2 = \\frac{1}{1+\\delta\\beta}\\left[\\frac{w(\\delta\\beta+\\delta\\beta^2)}{1+\\delta\\beta+\\delta\\beta^2}\\right]\n",
+    "$$\n",
+    "$$\n",
+    "c^*_3 = \\frac{w\\delta\\beta^2}{1+\\delta\\beta+\\delta\\beta^2}, \\quad c^{NC}_3 = \\frac{\\delta\\beta}{1+\\delta\\beta}\\left[\\frac{w(\\delta\\beta+\\delta\\beta^2)}{1+\\delta\\beta+\\delta\\beta^2}\\right]\n",
+    "$$\n",
+    "If $\\delta<1$ we see that\n",
+    "$$\n",
+    "c^*_2 < c^{NC}_2 \\\\\n",
+    "c^*_3 > c^{NC}_3\n",
+    "$$\n",
+    "and if $\\delta=1$ we collapse down to the commitment case."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ***Implementing the commitment case***\n",
+    "**Idea**\n",
+    "- Use taxation to implement the commitment outcome in the no-commitment case. In particular, impose a lump-sum tax in period 2 and a consumption subsidy in period 3.\n",
+    "\n",
+    "***Stage 3***\n",
+    "\n",
+    "Problem of agent 3 is now\n",
+    "$$\n",
+    "\\max_{\\{c_3\\}} \\log(c_3) \\\\\n",
+    "s.t. c_3 \\leq \\frac{s_2}{1-\\tau}, \\quad (>s_2)\\\\\n",
+    "c_3 \\geq 0\\\\\n",
+    "$$\n",
+    "and the solution is trivially $c_3 = \\frac{s_2}{1-\\tau}$.\n",
+    "\n",
+    "\n",
+    "***Stage 2***\n",
+    "\n",
+    "Agent 2 solves\n",
+    "$$\n",
+    "\\max_{\\{c_2,s_2\\}} \\log(c_2)+\\delta\\beta\\left[\\log\\left(\\frac{s_2}{1-\\tau}\\right)\\right] \\\\\n",
+    "s.t.  \\quad c_2+s_2\\leq s_1 - T \\\\\n",
+    "c_2,s_2 \\geq 0\n",
+    "$$\n",
+    "and the first-order conditions are\n",
+    "$$\n",
+    "\\left[c_2\\right]: \\frac{1}{c_2} = \\mu, \\quad \\left[s_2\\right]:\\frac{\\delta\\beta}{s_2} = \\mu\n",
+    "$$\n",
+    "and so\n",
+    "$$\n",
+    "\\frac{1}{c_2} = \\frac{\\delta\\beta}{s_2} \\implies \\delta\\beta c_2 = s_2\n",
+    "$$\n",
+    "$$\n",
+    "c_2 + s_2 = s_1 - T \\implies \\left[1+\\delta\\beta\\right]c_2 = s_1 - T\n",
+    "$$\n",
+    "and so\n",
+    "$$\n",
+    "c_2 = \\frac{s_1-T}{1+\\delta\\beta}, \\quad s_2 = \\frac{\\delta\\beta(s_1-T)}{1+\\delta\\beta}\n",
+    "$$\n",
+    "and then we need to find the tax $T$ such that $s^*_2 - s_2^{NC}$. To do so, recall that\n",
+    "$$\n",
+    "s^*_1 = w-c^*_1 = w- \\frac{w}{1+\\delta\\beta+\\delta\\beta^2}=\\frac{\\left[\\delta\\beta+\\delta\\beta^2 \\right]w}{1+\\delta\\beta+\\delta\\beta^2}\n",
+    "$$\n",
+    "and then, if we want to find the tax which implements the commitment case, we solve $c^*_2 = c_2^{NC}$ which is\n",
+    "$$\n",
+    "\\frac{s^*_1-T}{1+\\delta\\beta} = \\frac{\\delta\\beta w}{1+\\delta\\beta+\\delta\\beta^2}\n",
+    "$$\n",
+    "$$\n",
+    "\\implies \\frac{\\left[\\delta\\beta+\\delta\\beta^2 \\right]w}{1+\\delta\\beta+\\delta\\beta^2} - T = \\frac{\\left[1+\\delta\\beta \\right]\\delta\\beta w}{1+\\delta\\beta+\\delta\\beta^2}\n",
+    "$$\n",
+    "$$\n",
+    "T = \\frac{\\left[\\delta\\beta+\\delta\\beta^2 \\right]w}{1+\\delta\\beta+\\delta\\beta^2} - \\frac{(\\delta\\beta+\\delta^2\\beta^2)w}{1+\\delta\\beta+\\delta\\beta^2} = \\frac{(\\delta\\beta^2-\\delta^2\\beta^2)w}{1+\\delta\\beta+\\delta\\beta^2}=\\frac{w\\delta\\beta^2(1-\\delta)}{1+\\delta\\beta+\\delta\\beta^2}.\n",
+    "$$\n",
+    "We can solve for $\\tau$ using $T=\\frac{\\tau s^*_2}{1-\\tau}$ which comes from the government's budget constraint. So,\n",
+    "$$\n",
+    "\\frac{w\\delta\\beta^2(1-\\delta)}{1+\\delta\\beta+\\delta\\beta^2} = \\frac{\\tau}{1-\\tau}\\frac{\\delta\\beta^2w}{1+\\delta\\beta+\\delta\\beta^2}\n",
+    "$$\n",
+    "$$\n",
+    "\\implies 1-\\delta = \\frac{\\tau}{1-\\tau}\n",
+    "$$\n",
+    "$$\n",
+    "\\implies \\tau = \\frac{1-\\delta}{2-\\delta}, \\implies (1-\\tau) = \\frac{1}{2-\\delta}.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we must show that $c_3^{NC} = \\frac{(s_1^*-T)}{1+\\delta\\beta} = c^*_3$. Alternatively, we can use $c_3^{NC}(1-\\tau) = \\frac{(s_1^*-T)\\delta\\beta}{1+\\delta\\beta}(1-\\tau) = c^*_3$. So,\n",
+    "$$\n",
+    "\\frac{w\\delta\\beta^2}{1+\\delta\\beta+\\delta\\beta^2} = \\frac{1}{2-\\delta}\\frac{\\delta\\beta}{1+\\delta\\beta}\\left[\\frac{w(\\delta\\beta+\\delta\\beta^2)}{1+\\delta\\beta+\\delta\\beta^2}-\\frac{w\\delta\\beta^2(1-\\delta)}{1+\\delta\\beta+\\delta\\beta^2}\\right] \n",
+    "$$\n",
+    "$$\n",
+    "\\implies \\beta = \\frac{1}{2-\\delta}\\frac{1}{1+\\delta\\beta}\\left[(\\delta\\beta+\\delta\\beta^2)-\\delta\\beta^2(1-\\delta)\\right]=\\frac{1}{2-\\delta}\\frac{1}{1+\\delta\\beta}\\left[\\delta\\beta+\\delta^2\\beta^2\\right]\n",
+    "$$\n",
+    "$$\n",
+    "\\implies \\beta(1+\\delta\\beta) = \\frac{1}{2-\\delta}\\delta\\beta(1+\\delta\\beta)\n",
+    "$$\n",
+    "$$\n",
+    "\\implies 1 = \\frac{\\delta}{2-\\delta}\n",
+    "$$\n",
+    "$$\n",
+    "\\implies \\delta = 1\n",
+    "$$\n",
+    "and so our taxes implement the case when agents 1 and 2 do not disagree."
+   ]
   }
  ],
  "metadata": {
