--- a/Larry/hyperbolic_discounting/hyp_discounting.ipynb
+++ b/Larry/hyperbolic_discounting/hyp_discounting.ipynb
@@ -30,11 +30,11 @@
     "$$\n",
     "***Lack of self control:***\n",
     "- Preferences in each period are\n",
-    "$$\n",
-    "1. \\quad U_1 = u(c_1) + \\delta[\\beta u(c_2)+ \\beta^2 u(c_3)] \\\\\n",
-    "2. \\quad U_2 = u(c_2) + \\delta \\beta u(c_3) \\\\\n",
-    "3. \\quad U_3 = u(c_3)\n",
-    "$$\n",
+    "\n",
+    "1. $\\quad U_1 = u(c_1) + \\delta[\\beta u(c_2)+ \\beta^2 u(c_3)] $ \n",
+    "2. $\\quad U_2 = u(c_2) + \\delta \\beta u(c_3)$\n",
+    "3. $\\quad U_3 = u(c_3)$\n",
+    "\n",
     "- The critical feature of the model is that 1. and 2. disagree about the marginal rate of substitution between consumption at $t=2$ and $3$.To see this, consider that\n",
     "$$\n",
     "\\frac{U_{1,2}}{U_{1,3}} = \\frac{\\delta \\beta u'(c_2)}{\\delta \\beta^2 u'(c_3)} = \\frac{u'(c_2)}{\\beta u'(c_3)}\n",
