commit fixed typos

--- a/Larry/intermediate_goods/intermediate_goods_result.ipynb
+++ b/Larry/intermediate_goods/intermediate_goods_result.ipynb
@@ -58,7 +58,7 @@
     "* government consumption, *g*, and\n",
     "* labour, *l*.\n",
     "\n",
-    "There is also one intermediate good, indexed by *z*.\n",
+    "There is also one intermediate good, indexed by $z$.\n",
     "In this economy, the Ramsey planner has taxes on consumption and the intermediate good at his disposal, denoted by $\\tau_c$ and $\\tau_z$ respectively. There is no labour income tax. That is, $\\tau_n= 0$.\n",
     "Preferences are of the form:\n",
     "$$\n",
