--- a/Larry/intermediate_goods/intermediate_goods_result.ipynb
+++ b/Larry/intermediate_goods/intermediate_goods_result.ipynb
@@ -158,7 +158,7 @@
    "source": [
     "We will proceed in the following manner:\n",
     "* *(1)* Solve the household's problem and derive the implementability constraint\n",
-    "* *(2)* Setup the Ramsey planner's problem for an optimal production condition\n",
+    "* *(2)* Setup the Ramsey planner's problem and solve for an optimal production condition\n",
     "* *(3)* Find the optimal production decisions for the firms in the decentralised economy\n",
     "* *(4)* Compare the two sets of conditions and find that $\\tau_z=0$ is optimal."
    ]
