fixed a mistake in the planner's Lagrangian

--- a/Larry/intermediate_goods/intermediate_goods_result.ipynb
+++ b/Larry/intermediate_goods/intermediate_goods_result.ipynb
@@ -223,20 +223,20 @@
     "$$\n",
     "and the corresponding Lagrangian is\n",
     "$$\n",
-    "\\mathcal{L}^{RP} = U(c,1-(l_1+l_2)) + \\lambda^{RP}[cU_c - U_l(l_1+l_2)] +\\eta^{RP} [f(c,z,l_1)] + \\mu^{RP}[h(z,g,l_2)].\n",
+    "\\mathcal{L}^{RP} = U(c,1-(l_1+l_2)) + \\lambda^{RP}[cU_c - U_l(l_1+l_2)] +\\eta^{RP} [-f(c,z,l_1)] + \\mu^{RP}[-h(z,g,l_2)].\n",
     "$$\n",
     "The first-order conditions of this problem are\n",
     "$$\n",
-    "\\left[c\\right]: 0 = U_c + \\lambda^{RP}\\{cU_{cc} + U_c - U_{lc}(l_1+l_2)\\} + \\eta^{RP} f_c\n",
+    "\\left[c\\right]: 0 = U_c + \\lambda^{RP}\\{cU_{cc} + U_c - U_{lc}(l_1+l_2)\\} - \\eta^{RP} f_c\n",
     "$$\n",
     "$$\n",
-    "\\left[z\\right]:  0=\\eta^{RP} f_z + \\mu^{RP}h_z\n",
+    "\\left[z\\right]:  0=- \\eta^{RP} f_z - \\mu^{RP}h_z\n",
     "$$\n",
     "$$\n",
-    "\\left[l_1\\right]: 0 = -U_l + \\lambda^{RP}\\{cU_{cl} -[-U_{ll}(l_1+l_2)+ U_l]\\} +\\eta^{RP}f_{l_1}\n",
+    "\\left[l_1\\right]: 0 = -U_l + \\lambda^{RP}\\{cU_{cl} -[-U_{ll}(l_1+l_2)+ U_l]\\} - \\eta^{RP}f_{l_1}\n",
     "$$\n",
     "$$\n",
-    "\\left[l_2\\right]: 0 = -U_l + \\lambda^{RP}\\{cU_{cl} -[-U_{ll}(l_1+l_2)+ U_l]\\} +\\mu^{RP}h_{l_2}\n",
+    "\\left[l_2\\right]: 0 = -U_l + \\lambda^{RP}\\{cU_{cl} -[-U_{ll}(l_1+l_2)+ U_l]\\} - \\mu^{RP}h_{l_2}\n",
     "$$"
    ]
   },
@@ -246,7 +246,7 @@
    "source": [
     "From the first-order conditions on $l_1$ and $l_2$\n",
     "$$\n",
-    "-U_l + \\lambda^{RP}\\{cU_{cl} -[-U_{ll}(l_1+l_2)+ U_l]\\} +\\eta^{RP}f_{l_1} =  -U_l + \\lambda^{RP}\\{cU_{cl} -[-U_{ll}(l_1+l_2)+ U_l]\\} +\\mu^{RP}h_{l_2}\n",
+    "-U_l + \\lambda^{RP}\\{cU_{cl} -[-U_{ll}(l_1+l_2)+ U_l]\\} -\\eta^{RP}f_{l_1} =  -U_l + \\lambda^{RP}\\{cU_{cl} -[-U_{ll}(l_1+l_2)+ U_l]\\} -\\mu^{RP}h_{l_2}\n",
     "$$\n",
     "$$\n",
     "\\implies \\eta^{RP}f_{l_1} = \\mu^{RP}h_{l_2} \\tag{1}\n",
