--- a/Larry/uniform_commodity/unif_commodity.ipynb
+++ b/Larry/uniform_commodity/unif_commodity.ipynb
@@ -261,7 +261,7 @@
     "$$\n",
     "U(c,l) = W(G(c),l)\n",
     "$$\n",
-    "and that G is homothetic. Then, at the solution to the Ramsey problem, $\\tau_i - \\tau_j, \\forall i,j \\in \\{1,\\ldots,J\\}$. "
+    "and that G is homothetic. Then, at the solution to the Ramsey problem, $\\tau_i = \\tau_j, \\forall i,j \\in \\{1,\\ldots,J\\}$. "
    ]
   },
   {
