--- a/Larry/uniform_commodity/unif_commodity.ipynb
+++ b/Larry/uniform_commodity/unif_commodity.ipynb
@@ -397,7 +397,7 @@
     "$$\n",
     "\\frac{U_i}{F_i} = \\frac{U_j}{F_j}, \\forall i,j \n",
     "$$\n",
-    "which by our previous results that $\\tau_i = \\tau_j, \\forall i,j$."
+    "which by our previous results implies that $\\tau_i = \\tau_j, \\forall i,j$."
    ]
   },
   {
