fixed some typos

--- a/Larry/uniform_commodity/unif_commodity.ipynb
+++ b/Larry/uniform_commodity/unif_commodity.ipynb
@@ -132,7 +132,7 @@
     "Assume enough interiority and differentiability such that the first-order conditions charactierise the TDCE allocations. Then, a TDCE allocation satisfies:\n",
     "1. **Feasibility**\n",
     "$$\n",
-    "F(c_1+g_1,\\ldots,c_J+g_J) = 0\n",
+    "F(c_1+g_1,\\ldots,c_J+g_J;n) = 0\n",
     "$$\n",
     "2. **Implementability**\n",
     "$$\n",
@@ -201,7 +201,6 @@
     "$$\n",
     "F(c_1+g_1,\\ldots,c_J+g_J;n) \\leq 0\n",
     "$$\n",
-    "and\n",
     "2. **Implementability**\n",
     "$$\n",
     "\\sum_j U_j c_j = U_l n\n",
@@ -276,7 +275,7 @@
    "metadata": {},
    "source": [
     "#### ***Proposition 3***\n",
-    "Suppose that the utillity is weakly separable across consumption goods and is homothetic in consumption. Then $U_i/U_j = F_i/F_j$ for $i,j \\in \\{1,\\ldots,J\\}$. That is, optimal commodity taxes are uniform in the sense that the Ramsey taxes satisfy $\\tau_i = \\tau_j, \\quad \\forall i,j \\in \\{1,\\ldots,J\\}$."
+    "Suppose that the utillity is weakly separable across consumption goods and is homothetic in consumption. Then $U_i/U_j = F_i/F_j$ for $i,j \\in \\{1,\\ldots,J\\}$. That is, optimal commodity taxes are uniform in the sense that the Ramsey taxes satisfy $\\tau_i = \\tau_j,\\forall i,j \\in \\{1,\\ldots,J\\}$."
    ]
   },
   {
@@ -356,18 +355,18 @@
    "source": [
     "Now, set up the Largrangian for the Ramsey planner\n",
     "$$\n",
-    "\\mathcal{L^{RP}} = U(c;l) - \\gamma \\left[F(c_1+g_1,\\ldots,c_J+g_J;n)\\right] + \\Lambda \\left[\\sum_i U_i c_i - U_l n \\right]\n",
+    "\\mathcal{L^{RP}} = U(c;l) - \\gamma \\left[F(c_1+g_1,\\ldots,c_J+g_J;n)\\right] + \\Lambda \\left[U_l n-\\sum_i U_i c_i \\right]\n",
     "$$\n",
     "$$\n",
-    "\\left[c_k \\right]: U_k - \\gamma F_k + \\Lambda U_k + \\Lambda \\sum_j U_{kj}c_j - \\Lambda n U_{lk} = 0\n",
+    "\\left[c_k \\right]: U_k - \\gamma F_k - \\Lambda U_k - \\Lambda \\sum_j U_{kj}c_j + \\Lambda n U_{lk} = 0\n",
     "$$\n",
     "and so we find\n",
     "$$\n",
-    "(1+\\Lambda)U_k + \\Lambda\\left[\\sum_j c_j U_{kj} - nU_{lk} \\right] = \\gamma F_k\n",
+    "(1-\\Lambda)U_k - \\Lambda\\left[\\sum_j c_j U_{kj} - nU_{lk} \\right] = \\gamma F_k\n",
     "$$\n",
     "and, using that $\\sum_j c_j U_{ij} = AU_i$, we see\n",
     "$$\n",
-    "(1+\\Lambda)U_k + \\Lambda A U_k - \\Lambda nU_{lk} = \\gamma F_k.\n",
+    "(1-\\Lambda)U_k - \\Lambda A U_k + \\Lambda nU_{lk} = \\gamma F_k.\n",
     "$$\n",
     "Then, by the utility function, we know\n",
     "$$\n",
@@ -377,11 +376,11 @@
     "$$\n",
     "and so\n",
     "$$\n",
-    "(1+\\Lambda)W_1 G_k + \\Lambda A W_1 G_k - \\Lambda n W_{21}G_k = \\gamma F_k\n",
+    "(1-\\Lambda)W_1 G_k - \\Lambda A W_1 G_k + \\Lambda n W_{21}G_k = \\gamma F_k\n",
     "$$\n",
     "which, upon rearrangement gives \n",
     "$$\n",
-    "\\frac{G_k}{F_k} = \\frac{\\gamma}{(1-\\Lambda)W_1 + \\Lambda A W_1 - \\Lambda n W_{21}}\n",
+    "\\frac{G_k}{F_k} = \\frac{\\gamma}{(1-\\Lambda)W_1 - \\Lambda A W_1 + \\Lambda n W_{21}}\n",
     "$$\n",
     "which is independent of $k$, and so it holds for all varieties. "
    ]
@@ -430,7 +429,7 @@
     "$$\n",
     "1+\\underbrace{\\tau_1}_\\text{= 0} = -\\frac{U_1}{U_l}\\frac{F_n}{F_1} \\iff \\frac{U_l}{U_1} = -\\frac{F_n}{F_1}\n",
     "$$\n",
-    "So, eve if $U$ satisfies $W(G(c);l)$ optimal commodity taxes on goods $2$ through $J$ are not necessarily uniform.\n",
+    "So, even if $U$ satisfies $W(G(c);l)$ optimal commodity taxes on goods $2$ through $J$ are not necessarily uniform.\n",
     "\n",
     "#### **Infinite Horizon**\n",
     "Finally, in order to connect this result on uniform commodity taxation to results in infinite horizon models, suppose that the utility function is defined over an infinite sequence of consumption and labour good as $U(c_1,c_2,\\ldots;l_1,l_2,\\ldots)$. The assumption that the utility is of the form $V(\\phi(c_1,c_2,\\ldots);l_1,l_2,\\ldots)$ with $\\phi$ homothetic and separable between consumption and all labour goods $l_1,l_2,\\ldots$ together with the assumption that the utility function is additively separable across time with constant discunt factor $\\beta$ restricts us to the form\n",
