fixed a number of typos

--- a/Larry/hyperbolic_discounting/hyp_discounting.ipynb
+++ b/Larry/hyperbolic_discounting/hyp_discounting.ipynb
@@ -35,7 +35,7 @@
     "2. $\\quad U_2 = u(c_2) + \\delta \\beta u(c_3)$\n",
     "3. $\\quad U_3 = u(c_3)$\n",
     "\n",
-    "- The critical feature of the model is that 1. and 2. disagree about the marginal rate of substitution between consumption at $t=2$ and $3$. To see this, consider that\n",
+    "The critical feature of the model is that 1. and 2. disagree about the marginal rate of substitution between consumption at $t=2$ and $3$. To see this, consider that\n",
     "$$\n",
     "\\frac{U_{1,2}}{U_{1,3}} = \\frac{\\delta \\beta u'(c_2)}{\\delta \\beta^2 u'(c_3)} = \\frac{u'(c_2)}{\\beta u'(c_3)}\n",
     "$$\n",
@@ -51,7 +51,7 @@
    "source": [
     "There are two versions of this game.\n",
     "1. ***Commitment:*** The agent in the first period chooses the entire allocation: $\\{c^*_1,c^*_2,c^*_3\\}$\n",
-    "2. ***No commitment:*** The first agent chooses $\\{c^{1}_1,c^{1}_2,c^{1}_3\\}$, the second chooses $\\{c^{2}_2,c^{2}_3\\}$ and the third chooses $\\{c^{3}_3\\}$ \n",
+    "2. ***No commitment:*** The first agent chooses $\\{c_1,s_1\\}$, the second chooses $\\{c_2,s_2\\}$ and the third chooses $\\{c_3\\}$ \n",
     "\n",
     "\n",
     "We will consider subgame perfect equilibria."
@@ -234,7 +234,7 @@
     "Problem of agent 3 is now\n",
     "$$\n",
     "\\max_{\\{c_3\\}} \\log(c_3) \\\\\n",
-    "s.t. c_3 \\leq \\frac{s_2}{1-\\tau}, \\quad (>s_2)\\\\\n",
+    "s.t. \\quad c_3 \\leq \\frac{s_2}{1-\\tau}, \\quad (>s_2)\\\\\n",
     "c_3 \\geq 0\\\\\n",
     "$$\n",
     "and the solution is trivially $c_3 = \\frac{s_2}{1-\\tau}$.\n",
